# android-native-mac-ports

./: .gitignore  CMakeLists.txt  config.h.in
liblog/include/log/: log.h
libutils/: Looper.cpp  RefBase.cpp  SharedBuffer.cpp  StrongPointer.cpp  Timers.cpp  VectorImpl.cpp
libutils/include/utils/: Errors.h  Looper.h  Mutex.h  RefBase.h  String8.h  StrongPointer.h  TypeHelpers.h  Unicode.h  Vector.h  macros.h
macport/: eventfd.c
macport/include/sys/: eventfd.h
native/android/: looper.cpp
native/include/android/: looper.h
